Update based on dhoppe/modulesync_config

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ deploy:
   provider: puppetforge
   user: dhoppe
   password:
-    secure: ""
+    secure: "JmSQIDu2M6FdKSGIFLWAyBL3ek89xO6i7BaoEroNzd+EMR9y+fvRtUmdvHfGrS/h2t6mE5ZmjCaSqc2aAAq/ZdR3Suktxy/gFF2KEB60c2jGjoVmuxd3rTJBuDIibR/sUjIWzaZAlcKO0Ftck6J7ZKcJtmKzeIn4JiCj8oJ3aNQ="
   on:
     tags: true
     # all_branches is required to use tags
